# rust-pdf

./: .gitignore  Cargo.toml  README.md
examples/: c_example.c  digital_signature_example.rs  forms_example.rs  go_example.go  node_example.js  python_example.py  ruby_example.rb
examples/rust_ffi_example/: Cargo.toml  build.rs
examples/rust_ffi_example/src/: main.rs  rust_pdf_sys.rs
include/: rust_pdf.h
src/: error.rs  ffi.rs  lib.rs
src/color/: cmyk.rs  gray.rs  mod.rs  rgb.rs
src/content/: graphics.rs  mod.rs  operator.rs  text.rs
src/document/: info.rs  mod.rs  version.rs
src/encryption/: config.rs  key_derivation.rs  mod.rs  permissions.rs
src/font/: metrics.rs  mod.rs  standard14.rs
src/forms/: field.rs  mod.rs  widget.rs
src/image/: mod.rs  xobject.rs
src/object/: array.rs  dictionary.rs  mod.rs  name.rs  stream.rs  string.rs
src/page/: mod.rs
src/parser/: lexer.rs  mod.rs  objects.rs  trailer.rs  xref.rs
src/signatures/: certificate.rs  config.rs  mod.rs  pkcs7.rs  signer.rs
src/types/: matrix.rs  mod.rs  object_id.rs  rectangle.rs
src/writer/: mod.rs  serializer.rs  xref.rs
tests/: integration_tests.rs
